// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DecoratedRoomAvatar shows an avatar with globe icon and tooltip for public room 1`] = `
<DocumentFragment>
  <div
    class="mx_DecoratedRoomAvatar mx_DecoratedRoomAvatar_cutout"
  >
    <span
      class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
      data-color="1"
      data-testid="avatar-img"
      data-type="round"
      role="presentation"
      style="--cpd-avatar-size: 32px;"
    >
      r
    </span>
    <div
      aria-labelledby="_r_0_"
      class="mx_DecoratedRoomAvatar_icon mx_DecoratedRoomAvatar_icon_globe"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`DecoratedRoomAvatar shows the presence indicator in a DM room that also has functional members 1`] = `
<DocumentFragment>
  <div
    class="mx_DecoratedRoomAvatar mx_DecoratedRoomAvatar_cutout"
  >
    <span
      class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
      data-color="5"
      data-testid="avatar-img"
      data-type="round"
      role="presentation"
      style="--cpd-avatar-size: 32px;"
    >
      r
    </span>
    <div
      aria-labelledby="_r_6_"
      class="mx_DecoratedRoomAvatar_icon mx_DecoratedRoomAvatar_icon_online"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
